[gd_scene load_steps=8 format=2]

[ext_resource path="res://Videojoc/Escenas/MaxScores.gd" type="Script" id=1]
[ext_resource path="res://Videojoc/GFX/Background/bg_layer1.png" type="Texture" id=2]
[ext_resource path="res://Videojoc/Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Videojoc/SFX/Ship.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 23
font_data = ExtResource( 3 )

[node name="MaxScores" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
editor/display_folded = true
margin_left = 338.734
margin_top = 144.2
margin_right = 633.734
margin_bottom = 190.2

[node name="Label" type="Label" parent="CenterContainer"]
margin_right = 295.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "MAX. SCORES"
__meta__ = {
"_edit_lock_": true
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 443.483
margin_top = 472.051
margin_right = 513.483
margin_bottom = 512.051

[node name="Label" type="Label" parent="TextureButton"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Menu"
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 384.987
margin_top = 257.111
margin_right = 467.987
margin_bottom = 284.111
custom_fonts/font = SubResource( 3 )
text = "Level 1:"

[node name="Label2" type="Label" parent="."]
margin_left = 380.905
margin_top = 302.004
margin_right = 468.905
margin_bottom = 329.004
custom_fonts/font = SubResource( 3 )
text = "Level 2:"

[node name="Label3" type="Label" parent="."]
margin_left = 381.919
margin_top = 349.067
margin_right = 469.919
margin_bottom = 380.067
custom_fonts/font = SubResource( 3 )
text = "Level 3:"

[node name="score1" type="Label" parent="."]
margin_left = 516.943
margin_top = 257.111
margin_right = 556.943
margin_bottom = 284.111
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="score2" type="Label" parent="."]
margin_left = 515.583
margin_top = 303.364
margin_right = 555.583
margin_bottom = 330.364
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="score3" type="Label" parent="."]
margin_left = 518.404
margin_top = 347.412
margin_right = 558.404
margin_bottom = 374.412
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
